Basic create/edit of applications

--- a/savas/Themes/savas/default/package.json
+++ b/savas/Themes/savas/default/package.json
@@ -12,6 +12,8 @@
   "dependencies": {
     "@yurderi/vue-ui": "^1.2.0",
     "axios": "^0.18.0",
+    "less": "^3.8.1",
+    "less-loader": "^4.1.0",
     "lodash": "^4.17.10",
     "vue": "^2.5.2",
     "vue-router": "^3.0.1",
