--- a/savas/Themes/savas/default/package.json
+++ b/savas/Themes/savas/default/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@yurderi/vue-ui": "^1.2.0",
+    "async": "^2.6.1",
     "axios": "^0.18.0",
     "less": "^3.8.1",
     "less-loader": "^4.1.0",
