--- a/savas-cli/package.json
+++ b/savas-cli/package.json
@@ -24,13 +24,16 @@
   },
   "homepage": "https://github.com/yurderi/savas#readme",
   "dependencies": {
+    "async": "^2.6.1",
     "axios": "^0.18.0",
     "commander": "^2.19.0",
+    "console.table": "^0.10.0",
     "fs-extra": "^7.0.0",
     "inquirer": "^6.2.0",
     "lodash": "^4.17.11",
     "shelljs": "^0.8.2",
-    "yaml": "^1.0.0"
+    "yaml": "^1.0.0",
+    "yargs": "^12.0.2"
   },
   "bin": {
     "savas": "./bin/savas.js"
