--- a/savas-cli/package.json
+++ b/savas-cli/package.json
@@ -28,6 +28,7 @@
     "axios": "^0.18.0",
     "commander": "^2.19.0",
     "console.table": "^0.10.0",
+    "form-data": "^2.3.3",
     "fs-extra": "^7.0.0",
     "inquirer": "^6.2.0",
     "lodash": "^4.17.11",
