--- a/savas-cli/package.json
+++ b/savas-cli/package.json
@@ -1,6 +1,6 @@
 {
   "name": "savas-cli",
-  "version": "0.0.2",
+  "version": "0.0.3",
   "description": "A cli tool to manage releases through the terminal",
   "main": "index.js",
   "scripts": {
@@ -33,6 +33,8 @@
     "inquirer": "^6.2.0",
     "lodash": "^4.17.11",
     "shelljs": "^0.8.2",
+    "table": "^5.1.1",
+    "update-notifier": "^2.5.0",
     "yaml": "^1.0.0",
     "yargs": "^12.0.2"
   },
