--- a/node-savas/package.json
+++ b/node-savas/package.json
@@ -1,6 +1,6 @@
 {
   "name": "node-savas",
-  "version": "2.0.1",
+  "version": "3.0.0",
   "description": "a node.js integration to communicate with the savas http-service",
   "main": "index.js",
   "scripts": {
@@ -25,6 +25,7 @@
   },
   "homepage": "https://github.com/yurderi/savas#readme",
   "dependencies": {
-    "axios": "^0.18.0"
+    "axios": "^0.18.0",
+    "lodash": "^4.17.11"
   }
 }
