--- a/node-savas/package.json
+++ b/node-savas/package.json
@@ -1,6 +1,6 @@
 {
   "name": "node-savas",
-  "version": "3.1.0",
+  "version": "3.2.1",
   "description": "a node.js integration to communicate with the savas http-service",
   "main": "index.js",
   "scripts": {
@@ -26,6 +26,20 @@
   "homepage": "https://github.com/yurderi/savas#readme",
   "dependencies": {
     "axios": "^0.18.0",
-    "lodash": "^4.17.11"
+    "boxen": "^3.2.0",
+    "chalk": "^2.4.2",
+    "configstore": "^4.0.0",
+    "extract-zip": "^1.6.7",
+    "lodash": "^4.17.11",
+    "path": "^0.12.7"
+  },
+  "changelog": {
+    "3.2.0": [
+      "commander.js integration",
+      "add __test__directory to .npmignore"
+    ],
+    "3.2.1": [
+      "Fix instanciating of Configstore"
+    ]
   }
 }
