--- a/node-savas/package.json
+++ b/node-savas/package.json
@@ -1,6 +1,6 @@
 {
   "name": "node-savas",
-  "version": "3.2.1",
+  "version": "3.2.2",
   "description": "a node.js integration to communicate with the savas http-service",
   "main": "index.js",
   "scripts": {
@@ -40,6 +40,9 @@
     ],
     "3.2.1": [
       "Fix instanciating of Configstore"
+    ],
+    "3.2.2": [
+      "Fix access to app.opts"
     ]
   }
 }
