--- a/node-savas/package.json
+++ b/node-savas/package.json
@@ -1,6 +1,6 @@
 {
   "name": "node-savas",
-  "version": "3.2.3",
+  "version": "3.3.0",
   "description": "a node.js integration to communicate with the savas http-service",
   "main": "index.js",
   "scripts": {
@@ -31,6 +31,7 @@
     "configstore": "^4.0.0",
     "extract-zip": "^1.6.7",
     "lodash": "^4.17.11",
+    "ora": "^3.4.0",
     "path": "^0.12.7"
   },
   "changelog": {
@@ -43,6 +44,10 @@
     ],
     "3.2.2": [
       "Fix access to app.opts"
+    ],
+    "3.3.0": [
+      "Fix several bugs",
+      "Use `ora` as terminal spinner"
     ]
   }
 }
