--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,13 @@
 .idea
 node_modules
 vendor
+
+###> symfony/framework-bundle ###
+/.env.local
+/.env.local.php
+/.env.*.local
+/config/secrets/prod/prod.decrypt.private.php
+/public/bundles/
+/var/
+/vendor/
+###< symfony/framework-bundle ###
